--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
     </head>
     <body>
-      <p>Hello, world!</p>
+      <p>Hello, World!</p>
     </body>
   </html>
   
